changed id and classes on html

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 </head>
 
 <body>
-    <header>
-        <nav id="nav">
+    <header class="nav">
+        <nav>
             <li><a href="index.html" target="_self">Home</a></li>
             <li><a href="index.html" target="_self">Shop</a></li>
             <li><a href="index.html" target="_self">About</a></li>
         </nav>
         <br>
-        <h1>Welcome!</h1>
+        <h1 class="title">Welcome!</h1>
     </header>
     
     <main>
-        <section id="Shop">
+        <section class="Shop">
             <h2>Shop with us.
                 <p id="About">In our store you can find anything! In our store you can find anything! In our store you can find anything!
                     In our store you can find anything! In our store you can find anything! In our store you can find anything!
@@ -27,6 +27,6 @@
         </section>
     </main>
 
-    <footer>&copy;Copyright Flores Productions</footer>
+    <footer id="footer">&copy;Copyright Flores Productions 2024</footer>
 </body>
 </html>
